--- a/nbs/00_umbrella.ipynb
+++ b/nbs/00_umbrella.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,25 +67,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_simulation_for_window(target_value, force_constant):\n",
-    "    # Run the MD simulation with the biasing potential\n",
-    "    configs = []\n",
-    "    for step in range(num_steps):\n",
-    "        config = generate_new_config()  # Using MD\n",
-    "        cv_value = compute_cv(config)\n",
-    "        energy = compute_energy(config) + biased_potential(cv_value, target_value, force_constant)\n",
-    "        if accept_new_config(energy):  # Based on Metropolis criterion or MD integration\n",
-    "            configs.append(config)\n",
-    "    return configs\n",
+    "# def run_simulation_for_window(target_value, force_constant):\n",
+    "#     # Run the MD simulation with the biasing potential\n",
+    "#     configs = []\n",
+    "#     for step in range(num_steps):\n",
+    "#         config = generate_new_config()  # Using MD\n",
+    "#         cv_value = compute_cv(config)\n",
+    "#         energy = compute_energy(config) + biased_potential(cv_value, target_value, force_constant)\n",
+    "#         if accept_new_config(energy):  # Based on Metropolis criterion or MD integration\n",
+    "#             configs.append(config)\n",
+    "#     return configs\n",
     "\n",
-    "# Main loop for umbrella sampling\n",
-    "all_configs = []\n",
-    "for window in windows:\n",
-    "    configs = run_simulation_for_window(target_value=window.target_value, force_constant=window.force_constant)\n",
-    "    all_configs.extend(configs)\n",
+    "# # Main loop for umbrella sampling\n",
+    "# all_configs = []\n",
+    "# for window in windows:\n",
+    "#     configs = run_simulation_for_window(target_value=window.target_value, force_constant=window.force_constant)\n",
+    "#     all_configs.extend(configs)\n",
     "\n",
     "# Post-process with WHAM to obtain free energy profile\n",
-    "free_energy_profile = wham(all_configs)\n"
+    "# free_energy_profile = wham(all_configs)\n"
    ]
   },
   {
@@ -105,18 +105,6 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.10"
   }
  },
  "nbformat": 4,
