--- a/nbs/00_umbrella.ipynb
+++ b/nbs/00_umbrella.ipynb
@@ -26,7 +26,7 @@
    "source": [
     "#| hide\n",
     "from nbdev.showdoc import *\n",
-    "from fastcore.test import test_eq\n"
+    "from fastcore.test import test_eq"
    ]
   },
   {
