--- a/nbs/01_file_io.ipynb
+++ b/nbs/01_file_io.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,20 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| hide\n",
     "from nbdev.showdoc import *\n",
-    "from fastcore.test import *\n",
+    "from fastcore.test import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
     "from pathlib import Path\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +50,8 @@
     "def get_casscf_energy_of_state(\n",
     "    file: Path,  # Path to TC output file\n",
     "    state: int,  # State ID (1-indexed)\n",
-    ") -> float:\n",
-    "    \"\"\"Returns CASSCF energy (in Hatree) of state\"\"\"\n",
+    ") -> float: # Energy in Hartree\n",
+    "    \"\"\"Returns CASSCF energy of state\"\"\"\n",
     "    with open(file, \"r\") as f:\n",
     "        for line in f:\n",
     "            if f\"Singlet state  {state} energy:\" in line:\n",
@@ -58,16 +67,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s1 energy: -750.8831979447649\n"
+     ]
+    }
+   ],
    "source": [
+    "s1_energy = get_casscf_energy_of_state(Path('../examples/tc-outfile/tc.out'), state=2)\n",
+    "print(f\"s1 energy: {s1_energy}\")\n",
     "test_close(get_casscf_energy_of_state(Path('../examples/tc-outfile/tc.out'), state=1), -750.98527871713941, eps=1e-6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,6 +188,18 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
